# jiratui

./: pyproject.toml
src/gojeera/: app.py  conftest.py  models.py
src/gojeera/api/: client.py
src/gojeera/css/: gojeera.tcss
src/gojeera/widgets/: screens.py  search.py  subtasks.py
src/gojeera/widgets/attachments/: attachments.py
src/gojeera/widgets/comments/: comments.py
src/gojeera/widgets/common/: widgets.py
src/gojeera/widgets/create_work_item/: screen.py
src/gojeera/widgets/related_work_items/: related_issues.py
src/gojeera/widgets/remote_links/: links.py
src/gojeera/widgets/work_item_details/: details.py  fields.py
src/gojeera/widgets/work_item_details/tests/: test_flagging_screen.py  test_update_dynamic_fields.py  test_widgets_factory.py
src/jiratui/: conftest.py  models.py
src/jiratui/tests/: test_models_atlas_parser.py
src/jiratui/utils/: adf_helpers.py
src/jiratui/widgets/common/: adf_textarea.py  factory_utils.py
src/jiratui/widgets/work_item_details/: factory.py
src/jiratui/widgets/work_item_details/tests/: test_widgets_factory.py
src/jiratui/widgets/work_item_info/: info.py
